--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 
 jobs: 
-  run node: 
+  run-node: 
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v3
