--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Workflow for e-bakery
 run-name: tests running by @${{ github.actor }}
 on: 
   push:
-    branches: [master]
+    branches: [nicolas]
   pull_request:
     branches: [master]
 
@@ -23,3 +23,8 @@ jobs:
 
       - name: run tests
         run: npm test
+
+      - name: lint code
+        run: npx eslint .
+
+      
