--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
