--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,4 +26,16 @@ jobs:
 
       - name: lint code
         run: npx eslint .
-      
+
+  docker: 
+    needs: run-node
+    runs-on: ubuntu-latest
+    steps: 
+      - name: check out the repo
+        uses: actions/checkout@v4
+
+      - name: log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
