--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,11 +34,14 @@ jobs:
       - name: check out the repo
         uses: actions/checkout@v4
 
-      - name: log in to Docker Hub
+      - name: log in to docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: build Docker image
+
+      - name: build docker image
         run: docker build -t e-bakery:latest .
+
+      - name: push docker image to docker Hub
+        run: docker push username/e-bakery:latest
