🐛 fix push to docker hub

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: build docker image
-        run: docker build -t e-bakery:latest .
+        run: docker build -t username/e-bakery:latest .
 
       - name: push docker image to docker Hub
         run: docker push username/e-bakery:latest
