--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: build docker image
-        run: docker build -t username/e-bakery:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/e-bakery:latest .
+
+      - name: tag docker image
+        run: docker tag ${{ secrets.DOCKER_USERNAME }}/e-bakery:latest 
 
       - name: push docker image to docker Hub
-        run: docker push username/e-bakery:latest 
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/e-bakery:latest 
