⏪ readd dependency scanning

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,9 @@ jobs:
 
       - name: lint code
         run: npx eslint .
+      
+      - name: dependency scanning
+        run: npm audit
         
   docker: 
     needs: run-node
@@ -48,7 +51,4 @@ jobs:
 
       - name: push docker image to docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/e-bakery:latest 
-
-      - name: Dependency Scanning
-        run: npm audit
     
