--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "release-it": "^17.2.1",
     "sequelize": "^6.35.1",
     "swagger-ui-express": "^4.6.3"
   },
