--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@release-it/conventional-changelog": "^8.0.1",
     "ajv": "^8.12.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
