--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -5,7 +5,7 @@ on:
     push:
     branches: [nicolas]
   pull_request:
-    branches: [master]
+    branches: [nicolas]
     
 jobs:
   close-stale-pr:
