--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -58,18 +58,23 @@ jobs:
     needs: docker
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js
+      - name: use Node.js
         uses: actions/setup-node@v4
         with: 
           node-version: 20.x
 
-      - name: Install dependencies
+      - name: install dependencies
         run: npm install
 
-      - name: Run release-it
+      - name: set git identity
+        run: |
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+
+      - name: run release-it
         run: npx release-it
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
