--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -71,7 +71,7 @@ jobs:
 
       - name: set git identity
         run: |
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.email "yann.sady.pro@gmail.com"
           git config --global user.name "${{ github.actor }}"
 
       - name: run release-it
