🔖 add github publish in release-it

--- a/.release-it.json
+++ b/.release-it.json
@@ -5,6 +5,9 @@
       "commitMessage": "Release v${version}",
       "requireCleanWorkingDir": true
     },
+    "github": {
+      "publish": true
+    },
     "npm": {
       "publish": false
     },
