🧪 test create release by tags into trigger

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,6 +3,8 @@ run-name: testing and deploying by @${{ github.actor }}
 on: 
   push:
     branches: [yann]
+    tags:
+      - 'v*'
 permissions:
   contents: write
 
