--- a/.release-it.json
+++ b/.release-it.json
@@ -14,7 +14,8 @@
     "plugins": {
       "@release-it/conventional-changelog": {
         "infile": "CHANGELOG.md"
-      }
+      },
+      "@release-it/github": {}
     }
 }
   
