--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -79,6 +79,25 @@ jobs:
           git config --global user.name "${{ github.actor }}"
 
       - name: run release-it
+        id: release-it
         run: npx release-it
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+
+      - name: extract changelog
+        id: changelog
+        if: steps.release-it.outcome == 'success'
+        run: |
+          TAG=$(git describe --tags)
+          CHANGELOG=$(awk -v tag="$TAG" '$0 ~ tag {flag=1; next} /^##/ {flag=0} flag' CHANGELOG.md)
+          echo "::set-output name=content::$CHANGELOG"
+
+      - name: create github release
+        if: steps.release-it.outcome == 'success'
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: ${{ steps.changelog.outputs.content }}
