--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -83,6 +83,14 @@ jobs:
         run: npx release-it
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      
+      - name: extract release number
+        id: extract-release-number
+        run: |
+          RELEASE_NUMBER=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.release-it.outputs.tag }} \
+          | jq -r '.id')")
+          echo "::set-output name=release_number::$RELEASE_NUMBER"
 
       - name: extract changelog
         id: changelog
@@ -98,7 +106,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: ${{ steps.changelog.outputs.content }}
+          tag_name: v${{ steps.extract-release-number.outputs.release_number }}
+          release_name: Release ${{ steps.extract-release-number.outputs.release_number }}
+          body: test
           draft: true
