--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,7 +1,7 @@
 name: Auto-close stale pull requests
 on:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '*/2 * * * *'
   pull_request:
     branches: [test-branch]
   push:
@@ -10,6 +10,8 @@ on:
 jobs:
   close-stale-pr:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -34,7 +36,7 @@ jobs:
           repo_name = os.getenv('GITHUB_REPOSITORY').split('/')[1]
 
           # Define the time threshold for stale pull requests (in minutes)
-          stale_threshold_minutes = 10
+          stale_threshold_minutes = 2
 
           # Authenticate using the provided GitHub token
           github_token = os.getenv('GITHUB_TOKEN')
