--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
         run: npm test
 
       - name: lint code
-        run: npx eslint .
+        run: npx eslint
         
   docker: 
     needs: run-node
