--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,29 +2,15 @@ name: Close Pull Request
 on:
   pull_request:
     types: [opened, review_requested]
+    branches: [test-branch]
+
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Check if pull request is from specific branch
-        if: ${{ github.event.pull_request.head.ref == 'test-branch' }}
-        run: |
-          echo "Pull request is from 'test-branch'"
-          # Wait for 3 minutes
-          sleep 180
-          # Check if any reviews have been submitted
-          reviews=$(curl -s -X GET \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews")
-          if [[ $(echo "$reviews" | jq '. | length') == 0 ]]; then
-            echo "No reviews submitted. Closing the pull request..."
-            # Close Pull Request
-            curl -X POST \
-              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-              -H "Accept: application/vnd.github.v3+json" \
-              "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge" \
-              -d '{"commit_title":"Pull request closed","merge_method":"close"}'
-          else
-            echo "Reviews have been submitted. Skipping..."
-          fi
+      - name: Close Pull Request
+        uses: superbrothers/close-pull-request@v3
+        with:
+          # Optional. Post a issue comment just before closing a pull request.
+          comment: "This pull request has been closed because no reviews were submitted."
