--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -4,13 +4,13 @@ on:
     types: [opened, review_requested]
     branches: [test-branch]
 
-
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
+      - name: Wait for 2 minutes
+        run: sleep 120 # Sleep for 2 minutes (120 seconds)
       - name: Close Pull Request
         uses: superbrothers/close-pull-request@v3
         with:
-          # Optional. Post a issue comment just before closing a pull request.
           comment: "This pull request has been closed because no reviews were submitted."
