--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,7 +1,7 @@
 name: Close Pull Request
 on:
   pull_request:
-    types: [opened, review_requested]
+    types: [opened]
     branches: [test-branch]
 
 jobs:
@@ -11,6 +11,7 @@ jobs:
       - name: Wait for 2 minutes
         run: sleep 120 # Sleep for 2 minutes (120 seconds)
       - name: Close Pull Request
+        if: github.event_name == 'pull_request'
         uses: superbrothers/close-pull-request@v3
         with:
           comment: "This pull request has been closed because no reviews were submitted."
