--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -9,6 +9,10 @@ jobs:
     steps:
       - name: Close Pull Request
         if: github.event_name == 'pull_request'
-        uses: NicolasKeerpal/workflow-e-bakery/close-pull-request@v1
-        with:
-          comment: "This pull request has been closed because no reviews were submitted."
+        run: |
+          echo "Closing pull request #${{ github.event.pull_request.number }}"
+          TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          OWNER="${{ github.repository_owner }}"
+          REPO="${{ github.repository }}"
+          PR_NUMBER="${{ github.event.pull_request.number }}"
+          curl -X POST -H "Authorization: token $TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${OWNER}/${REPO}/pulls/${PR_NUMBER}/merge" -d '{"merge_method": "squash", "commit_title": "Automatically closing pull request", "commit_message": "This pull request has been closed because no reviews were submitted."}'
