--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,18 +1,13 @@
 name: Close Pull Request
+
 on:
-  pull_request:
+  pull_request_target:
     types: [opened]
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Close Pull Request
-        if: github.event_name == 'pull_request'
-        run: |
-          echo "Closing pull request #${{ github.event.pull_request.number }}"
-          TOKEN="${{ secrets.GITHUB_TOKEN }}"
-          OWNER="${{ github.repository_owner }}"
-          REPO="${{ github.repository }}"
-          PR_NUMBER="${{ github.event.pull_request.number }}"
-          curl -X POST -H "Authorization: token $TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${OWNER}/${REPO}/pulls/${PR_NUMBER}/merge" -d '{"merge_method": "squash", "commit_title": "Automatically closing pull request", "commit_message": "This pull request has been closed because no reviews were submitted."}'
+    - uses: superbrothers/close-pull-request@v3
+      with:
+        comment: "Pull request as closed."
