--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,7 +8,7 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Check if reviews are approved
+      - name: Check if review are approved
         if: github.event.pull_request.review_decision == 'approved'
         run: |
           echo "Reviews are approved. Closing the pull request..."
