--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,27 +8,6 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Check if review are approved
-        if: github.event.pull_request.review_decision == 'approved'
-        run: |
-          echo "Reviews are approved. Closing the pull request..."
-          # Add the 'close-pull-request' action here
-          TOKEN="${{ secrets.GITHUB_TOKEN }}"
-          OWNER="${{ github.repository_owner }}"
-          REPO="${{ github.event.repository.name }}"
-          PR_NUMBER="${{ github.event.pull_request.number }}"
-          curl -X POST -H "Authorization: token $TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${OWNER}/${REPO}/pulls/${PR_NUMBER}/merge" -d '{"merge_method": "squash", "commit_title": "Automatically closing pull request", "commit_message": "This pull request has been closed because it was approved."}'
-      - name: Check if reviews are requested
-        if: github.event.pull_request.review_decision == 'changes_requested'
-        run: |
-          echo "Changes are requested. Do not close the pull request."
-      - name: Check if no reviews are required
-        if: github.event.pull_request.review_decision == null
-        run: |
-          echo "No reviews required. Closing the pull request..."
-          # Add the 'close-pull-request' action here
-          TOKEN="${{ secrets.GITHUB_TOKEN }}"
-          OWNER="${{ github.repository_owner }}"
-          REPO="${{ github.event.repository.name }}"
-          PR_NUMBER="${{ github.event.pull_request.number }}"
-          curl -X POST -H "Authorization: token $TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${OWNER}/${REPO}/pulls/${PR_NUMBER}/merge" -d '{"merge_method": "squash", "commit_title": "Automatically closing pull request", "commit_message": "This pull request has been closed because no reviews were required."}'
+    - uses: superbrothers/close-pull-request@v3
+      with:
+        comment: "Pull Request as closed."
