--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,4 +1,4 @@
-name: Close Pull Request in 2 min
+name: Close Pull Request
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Wait for 2 minutes
-        run: sleep 120 # 2 minutes (120 seconds)
+        run: sleep 120 # Sleep for 2 minutes (120 seconds)
       - name: Close Pull Request
         if: github.event.pull_request.review_decision == null
         uses: superbrothers/close-pull-request@v3
