--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,4 +1,4 @@
-name: Close Pull Request
+name: Fermer la demande de fusion
 
 on:
   pull_request:
@@ -8,10 +8,14 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Wait for 2 minutes
-        run: sleep 120 # Sleep for 2 minutes (120 seconds)
-      - name: Close Pull Request
+      - name: Attendre 2 minutes
+        run: sleep 120 # Attendre 2 minutes (120 secondes)
+      - name: Fermer la demande de fusion
         if: github.event.pull_request.review_decision == null
-        uses: superbrothers/close-pull-request@v3
-        with:
-          comment: "This pull request has been closed because no review was submitted within 2 minutes."
+        run: |
+          echo "Fermeture de la demande de fusion #${{ github.event.pull_request.number }}"
+          TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          OWNER="${{ github.event.repository.owner.login }}"
+          REPO="${{ github.event.repository.name }}"
+          PR_NUMBER="${{ github.event.pull_request.number }}"
+          curl -X PUT -H "Authorization: token $TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${OWNER}/${REPO}/pulls/${PR_NUMBER}" -d '{"state": "closed"}'
