--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,19 +1,22 @@
-name: Fermer la demande de fusion
+name: Close Pull Request
 
 on:
   pull_request:
     types: [opened]
 
+permissions:
+  contents: write
+  
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Attendre 2 minutes
-        run: sleep 120 # Attendre 2 minutes (120 secondes)
-      - name: Fermer la demande de fusion
+      - name: Wait for 2 minutes
+        run: sleep 120 # Sleep for 2 minutes (120 seconds)
+      - name: Close Pull Request
         if: github.event.pull_request.review_decision == null
         run: |
-          echo "Fermeture de la demande de fusion #${{ github.event.pull_request.number }}"
+          echo "Closing pull request #${{ github.event.pull_request.number }}"
           TOKEN="${{ secrets.GITHUB_TOKEN }}"
           OWNER="${{ github.event.repository.owner.login }}"
           REPO="${{ github.event.repository.name }}"
