--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -7,13 +7,11 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Close Pull Request
         if: github.event.pull_request.review_decision == null
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-        uses: peter-evans/close-pull@v3
-        with:
-          pull-request-number: ${{ github.event.pull_request.number }}
-          token: ${{ env.PAT_TOKEN }}
-          delete-branch: true
+        run: |
+          echo "Closing pull request #${{ github.event.pull_request.number }}"
+          gh pr close --number ${{ github.event.pull_request.number }} --delete-branch
