--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -7,11 +7,15 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Wait for 2 minutes
+        run: sleep 120 # Sleep for 2 minutes (120 seconds)
       - name: Close Pull Request
         if: github.event.pull_request.review_decision == null
         run: |
           echo "Closing pull request #${{ github.event.pull_request.number }}"
-          gh pr close ${{ github.event.pull_request.number }} --delete-branch
+          TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          OWNER="${{ github.event.repository.owner.login }}"
+          REPO="${{ github.event.repository.name }}"
+          PR_NUMBER="${{ github.event.pull_request.number }}"
+          curl -X PATCH -H "Authorization: token $TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${OWNER}/${REPO}/pulls/${PR_NUMBER}" -d '{"state": "closed"}'
