--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -14,7 +14,7 @@ jobs:
         if: github.event.pull_request.review_decision == null
         run: |
           echo "Closing pull request #${{ github.event.pull_request.number }}"
-          TOKEN="${{ secrets.NEW_GITHUB_TOKEN }}" # Update with your new token secret name
+          TOKEN="${{ secrets.Test }}" # Update with your new token secret name
           OWNER="${{ github.event.repository.owner.login }}"
           REPO="${{ github.event.repository.name }}"
           PR_NUMBER="${{ github.event.pull_request.number }}"
