--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -9,10 +9,10 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Wait for 1 minutes
+      - name: Wait for 1 minute
         run: sleep 60 # Sleep for 1 minute (60 seconds)
       - name: Close Pull Request
-        if: github.event.pull_request.review_decision == null
+        if: github.event.pull_request.reviews == null
         run: |
           echo "Closing pull request #${{ github.event.pull_request.number }}"
           TOKEN="${{ secrets.PR_Key }}"
