--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Wait for 1 minute
         run: sleep 60 # Sleep for 1 minute (60 seconds)
       - name: Close Pull Request
-        if: github.event.pull_request.reviews == null
+        if: github.event.pull_request.reviews == null || !github.event.pull_request.reviews.some(r => r.state == 'APPROVED')
         run: |
           echo "Closing pull request #${{ github.event.pull_request.number }}"
           TOKEN="${{ secrets.PR_Key }}"
