--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -15,6 +15,8 @@ jobs:
         id: check_review
         run: |
           echo "::set-output name=has_review::$([[ $(gh pr view ${{ github.event.pull_request.number }} --json review_decision -q .) == 'null' ]] && echo 'false' || echo 'true')"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Close Pull Request
         if: steps.check_review.outputs.has_review == 'false'
         uses: superbrothers/close-pull-request@v3
