--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -9,7 +9,7 @@ jobs:
   run:
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.PR_Key }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PR_NUMBER: ${{ github.event.pull_request.number }}
     steps:
       - name: Wait for 1 minute
@@ -17,8 +17,8 @@ jobs:
       - name: Check Review Status
         id: check_review
         run: |
-          HAS_REVIEW=$(gh pr view $PR_NUMBER --json review_decision -q .)
-          if [[ "$HAS_REVIEW" == "null" ]]; then
+          HAS_REVIEW=$(curl -s -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${{ github.repository }}/pulls/${PR_NUMBER}/reviews" | jq '. | length')
+          if [[ "$HAS_REVIEW" == "0" ]]; then
             echo "has_review=false" >> $GITHUB_ENV
           else
             echo "has_review=true" >> $GITHUB_ENV
