--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -11,6 +11,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PR_NUMBER: ${{ github.event.pull_request.number }}
+      HAS_REVIEW: false
     steps:
       - name: Wait for 1 minute
         run: sleep 60 # Sleep for 1 minute (60 seconds)
@@ -18,13 +19,9 @@ jobs:
         id: check_review
         run: |
           HAS_REVIEW=$(curl -s -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${{ github.repository }}/pulls/${PR_NUMBER}/reviews" | jq '. | length')
-          if [[ "$HAS_REVIEW" == "0" ]]; then
-            echo "has_review=false" >> $GITHUB_ENV
-          else
-            echo "has_review=true" >> $GITHUB_ENV
-          fi
       - name: Close Pull Request
-        if: env.has_review == 'false'
+        if: env.HAS_REVIEW == 'false'
         uses: superbrothers/close-pull-request@v3
         with:
           comment: "This pull request has been closed because no review was submitted within 1 minute."
+          github_token: ${{ secrets.GITHUB_TOKEN }}
