--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -3,6 +3,8 @@ name: Close Pull Request
 on:
   pull_request:
     types: [opened]
+  permissions:
+  contents: write
 
 jobs:
   close_pull_request:
