--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,10 +8,8 @@ jobs:
   close_pr_without_reviews:
     runs-on: ubuntu-latest
     steps:
-    - name: Wait for 2 minutes
-      uses: actions/wait-action@v2
-      with:
-        time: '2m' # 2 minutes
+    - name: Sleep for 2 minutes
+      run: sleep 120 # 2 minutes
 
     - name: Check for reviews
       uses: actions/github-script@v4
